syntax = "proto3";

package user; // 默认包名

option go_package = "./user";

message GetUserReq {
  string id = 1;
}

message GetUserResp {
  string id = 1;
  string name = 2;
  string phone = 3;
}

message CreateReq {
  int64 id = 1;
  string name = 2;
  string phone = 3;
}
message CreateResp {
  int64 id = 1;
}

service User {
  rpc GetUser(GetUserReq) returns (GetUserResp);
  rpc Create(CreateReq) returns (CreateResp);
}
